--- a/config/sync/webform.webform.download_white_paper.yml
+++ b/config/sync/webform.webform.download_white_paper.yml
@@ -1,9 +1,7 @@
 uuid: 27d24c6c-9a24-4175-b9a4-00bc39a272e4
 langcode: en
 status: open
-dependencies:
-  module:
-    - verathon_customization
+dependencies: {  }
 open: null
 close: null
 weight: 0
@@ -14,7 +12,7 @@ id: download_white_paper
 title: 'Download White Paper'
 description: ''
 category: ''
-elements: "name:\n  '#type': fieldset\n  '#title': Name\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\n  first_name:\n    '#type': textfield\n    '#title': First\n    '#title_display': after\n    '#autocomplete': 'off'\n    '#required': true\n    '#required_error': 'This field is required.'\n    '#access_create_roles':\n      - authenticated\n      - anonymous\n    '#access_update_roles':\n      - authenticated\n      - anonymous\n    '#access_view_roles':\n      - authenticated\n      - anonymous\n  last_name:\n    '#type': textfield\n    '#title': Last\n    '#title_display': after\n    '#autocomplete': 'off'\n    '#required': true\n    '#required_error': 'This field is required.'\n    '#access_create_roles':\n      - authenticated\n      - anonymous\n    '#access_update_roles':\n      - authenticated\n      - anonymous\n    '#access_view_roles':\n      - authenticated\n      - anonymous\nemail:\n  '#type': email\n  '#title': Email\n  '#autocomplete': 'off'\n  '#required': true\n  '#required_error': 'This field is required.'\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\ncountry:\n  '#type': webform_address\n  '#title': Country\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\n  '#address__access': false\n  '#address_2__access': false\n  '#city__access': false\n  '#state_province__access': false\n  '#postal_code__access': false\n  '#country__required': true\nzip_postcode:\n  '#type': textfield\n  '#title': Zip/Postcode\n  '#autocomplete': 'off'\n  '#required': true\n  '#required_error': 'This field is required.'\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\ncompany:\n  '#type': textfield\n  '#title': Company\n  '#required': true\n  '#required_error': 'This field is required.'\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\ndownload_whitepaper:\n  '#type': 'webform_entity_print_attachment:pdf'\n  '#title': 'Download Whitepaper'\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\n  '#download': true\nfile_path:\n  '#type': hidden\n  '#title': 'File Path'\n  '#default_value': /sites/default/files/2021-06/0900-4868-FRFR-xx-60.pdf\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\n  '#submit__label': Submit"
+elements: "name:\n  '#type': fieldset\n  '#title': Name\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\n  first_name:\n    '#type': textfield\n    '#title': First\n    '#title_display': after\n    '#autocomplete': 'off'\n    '#required': true\n    '#required_error': 'This field is required.'\n    '#access_create_roles':\n      - authenticated\n      - anonymous\n    '#access_update_roles':\n      - authenticated\n      - anonymous\n    '#access_view_roles':\n      - authenticated\n      - anonymous\n  last_name:\n    '#type': textfield\n    '#title': Last\n    '#title_display': after\n    '#autocomplete': 'off'\n    '#required': true\n    '#required_error': 'This field is required.'\n    '#access_create_roles':\n      - authenticated\n      - anonymous\n    '#access_update_roles':\n      - authenticated\n      - anonymous\n    '#access_view_roles':\n      - authenticated\n      - anonymous\nemail:\n  '#type': email\n  '#title': Email\n  '#autocomplete': 'off'\n  '#required': true\n  '#required_error': 'This field is required.'\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\ncountry:\n  '#type': webform_address\n  '#title': Country\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\n  '#address__access': false\n  '#address_2__access': false\n  '#city__access': false\n  '#state_province__access': false\n  '#postal_code__access': false\n  '#country__required': true\nzip_postcode:\n  '#type': textfield\n  '#title': Zip/Postcode\n  '#autocomplete': 'off'\n  '#required': true\n  '#required_error': 'This field is required.'\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\ncompany:\n  '#type': textfield\n  '#title': Company\n  '#required': true\n  '#required_error': 'This field is required.'\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\ndownload_whitepaper:\n  '#type': 'webform_entity_print_attachment:pdf'\n  '#title': 'Download Whitepaper'\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\n  '#download': true\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#access_create_roles':\n    - authenticated\n    - anonymous\n  '#access_update_roles':\n    - authenticated\n    - anonymous\n  '#access_view_roles':\n    - authenticated\n    - anonymous\n  '#submit__label': Submit"
 css: ''
 javascript: ''
 settings:
@@ -115,8 +113,8 @@ settings:
   draft_pending_single_message: ''
   draft_pending_multiple_message: ''
   confirmation_type: modal
-  confirmation_title: 'Thank you!'
-  confirmation_message: ''
+  confirmation_title: 'Here you go!'
+  confirmation_message: 'Information is submitted successfully and you will be receiving the document through Email. Thank you!'
   confirmation_url: 'https://www.verathon.com/contact-us/?productofinterest=glidescope&scheduledemovisit=yes&utm_campaign=&utm_medium=&utm_source=&utm_content=&utm_term='
   confirmation_attributes: {  }
   confirmation_back: true
@@ -193,14 +191,5 @@ access:
     roles: {  }
     users: {  }
     permissions: {  }
-handlers:
-  pdf_file_download_link:
-    id: pdf_file
-    label: 'PDF file download link'
-    notes: ''
-    handler_id: pdf_file_download_link
-    status: true
-    conditions: {  }
-    weight: 0
-    settings: {  }
+handlers: {  }
 variants: {  }
