--- a/config/sync/eu_cookie_compliance.settings.yml
+++ b/config/sync/eu_cookie_compliance.settings.yml
@@ -1,4 +1,4 @@
-uuid: b621e872-cb8f-48e4-ba19-e7a4cc4b8fcb
+uuid: 83eab004-f07a-4025-a23e-32a0d497ffc4
 cookie_lifetime: 100
 containing_element: body
 domain: ''
@@ -10,10 +10,10 @@ exclude_paths: "/admin\r\n/admin/*\r\n/batch\r\n/node/add*\r\n/node/*/*\r\n/user
 exclude_admin_theme: false
 langcode: en
 popup_agreed:
-  value: '<h2>Thank you for accepting cookies</h2><p>You can now hide this message or find out more about cookies.</p>'
-  format: plain_text
+  value: "<p>Thank you for accepting cookies. You can now hide this message or find out more about cookies.</p>\r\n"
+  format: cohesion
 popup_agree_button_message: 'Yes'
-popup_agreed_enabled: false
+popup_agreed_enabled: true
 popup_bg_hex: '212529'
 popup_clicking_confirmation: false
 popup_scrolling_confirmation: false
@@ -23,7 +23,7 @@ popup_more_info_button_message: 'More info'
 popup_enabled: true
 popup_find_more_button_message: 'More info'
 popup_height: null
-popup_hide_agreed: false
+popup_hide_agreed: true
 popup_hide_button_message: Hide
 popup_info:
   value: "<p>May we use cookies to track your activities? We take your privacy very seriously. Please see our <a href=\"https://www.verathon.com/legal\">privacy policy</a>&nbsp;for details and any questions.</p>\r\n"
@@ -53,7 +53,7 @@ automatic_cookies_removal: true
 allowed_cookies: ''
 consent_storage_method: do_not_store
 withdraw_message:
-  value: "<h2>We use cookies on this site to enhance your user experience</h2>\r\n\r\n<p>You have given your consent for us to set cookies.</p>\r\n"
+  value: "<p>May we use cookies to track your activities? We take your privacy very seriously. Please see our <a href=\"https://www.verathon.com/legal\">privacy policy</a>&nbsp;for details and any questions.</p>\r\n"
   format: cohesion
 withdraw_action_button_label: 'Withdraw consent'
 withdraw_tab_button_label: 'Privacy policy'
