--- a/config/sync/cohesion_templates.cohesion_content_templates.node_instructional_videos_full.yml
+++ b/config/sync/cohesion_templates.cohesion_content_templates.node_instructional_videos_full.yml
@@ -1,18 +1,18 @@
 uuid: 8141e0fc-83cd-443a-9c06-28aed4b7d2d1
 langcode: en
-status: false
+status: true
 dependencies: {  }
 id: node_instructional_videos_full
 label: 'Full content (Node, Instructional Videos)'
-json_values: '{"canvas":[],"mapper":null,"model":[]}'
+json_values: '{"canvas":[{"type":"item","uid":"video","title":"Video","selected":false,"status":{"collapsed":true,"isopen":false},"uuid":"4cc6bc22-fe0d-4036-b9cb-42fc572b3fa1","parentUid":"root","isContainer":false,"children":[]}],"mapper":{"4cc6bc22-fe0d-4036-b9cb-42fc572b3fa1":{}},"model":{"4cc6bc22-fe0d-4036-b9cb-42fc572b3fa1":{"settings":{"title":"Video","customStyle":[{"customStyle":"coh-style-video"}],"videoAutoplay":true,"videoLoop":false,"videoMute":false,"videoRewind":false,"videoClickPlaypause":true,"videoPauseOthers":true,"videoPlayOnHover":false,"videoShowControls":false,"videoShowControlsLoad":true,"videoShowControlsPause":true,"videoShowPlayCenter":true,"videoShowPlayPause":true,"videoShowCurrent":false,"videoShowProgress":true,"videoShowDuration":true,"videoShowVolume":true,"videoShowFullscreen":true,"settings":{"videoPreload":"none","videoAutoplay":false,"videoLoop":false,"videoMute":false,"videoRewind":true,"videoClickPlaypause":true,"videoPauseOthers":true,"videoPlayOnHover":false,"videoShowControls":false,"videoShowControlsLoad":true,"videoShowControlsPause":true,"videoShowPlayCenter":true,"videoShowPlayPause":true,"videoShowCurrent":true,"videoShowProgress":true,"videoShowDuration":true,"videoShowVolume":true,"videoShowFullscreen":true,"customStyle":[{"customStyle":""}]},"videoPreload":"none","videoUrl":"[node:field_video_url]","videoPoster":"[node:field_video_thumbnail]","videoPosterStyle":"","videoPosterPaused":false,"videoPosterEnd":false},"context-visibility":{"contextVisibility":{"condition":"ALL"}},"styles":{"settings":{"element":"media"}}}},"previewModel":{"4cc6bc22-fe0d-4036-b9cb-42fc572b3fa1":{"settings":{"videoPoster":""}}},"variableFields":{"4cc6bc22-fe0d-4036-b9cb-42fc572b3fa1":["settings.videoUrl","settings.videoPoster"]},"meta":{"fieldHistory":[]}}'
 json_mapper: '{}'
 last_entity_update: entityupdate_0029
-modified: false
-selectable: false
+modified: true
+selectable: true
 custom: false
-twig_template: null
-default: false
+twig_template: node--cohesion--node-instructional-videos-full
+default: true
 entity_type: node
 bundle: instructional_videos
 view_mode: full
-master_template: ''
+master_template: __none__
