--- a/config/sync/search_api.index.acquia_search_index.yml
+++ b/config/sync/search_api.index.acquia_search_index.yml
@@ -1,6 +1,6 @@
 uuid: 806b32b9-b0bf-434f-b5c4-5e6d4b2958d1
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - search_api_solr
@@ -8,8 +8,8 @@ dependencies:
     - node
     - search_api
   config:
-    - field.storage.node.field_article_type
     - field.storage.node.body
+    - field.storage.node.field_article_type
     - field.storage.node.field_department
     - field.storage.node.field_document
     - field.storage.node.field_job_title
@@ -20,7 +20,6 @@ dependencies:
     - field.storage.node.field_role
     - field.storage.node.field_topic
     - field.storage.node.field_year
-    - search_api.server.acquia_search_server
 third_party_settings:
   search_api_solr:
     finalize: false
@@ -310,12 +309,10 @@ processor_settings:
     alt: true
     tags:
       b: 2
-      em: 1
       h1: 5
       h2: 3
       h3: 2
       strong: 2
-      u: 1
     weights:
       preprocess_index: -15
       preprocess_query: -15
@@ -326,8 +323,24 @@ processor_settings:
       preprocess_index: 0
   type_boost:
     boosts:
+      'entity:cohesion_layout':
+        datasource_boost: !!float 1
+      'entity:component_content':
+        datasource_boost: !!float 1
       'entity:node':
         datasource_boost: !!float 1
+        bundle_boosts:
+          article: !!float 5
+          clinical_publications: !!float 8
+          country_and_region: 0.1
+          event: 0.1
+          instructional_videos: !!float 13
+          news: !!float 3
+          page: 0.2
+          person: 0.1
+          place: 0.1
+          product: 0.1
+          product_documentation: !!float 21
     weights:
       preprocess_index: 0
 tracker_settings:
@@ -336,4 +349,4 @@ tracker_settings:
 options:
   index_directly: true
   cron_limit: 50
-server: acquia_search_server
+server: null
