--- a/config/sync/views.view.product_support_cards.yml
+++ b/config/sync/views.view.product_support_cards.yml
@@ -2985,9 +2985,26 @@ display:
           plugin_id: node_nid
       use_ajax: true
       pager:
-        type: none
+        type: full
         options:
+          items_per_page: 10
           offset: 0
+          id: 0
+          total_pages: null
+          tags:
+            previous: ‹
+            next: ›
+            first: «
+            last: »
+          expose:
+            items_per_page: false
+            items_per_page_label: 'Items per page'
+            items_per_page_options: '5, 10, 25, 50'
+            items_per_page_options_all: false
+            items_per_page_options_all_label: '- All -'
+            offset: false
+            offset_label: Offset
+          quantity: 9
       sorts:
         weight:
           id: weight
@@ -3009,6 +3026,7 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
+        - url.query_args
         - user
         - 'user.node_grants:view'
         - user.permissions
