--- a/config/sync/field.field.node.product.field_weight_to_sort.yml
+++ b/config/sync/field.field.node.product.field_weight_to_sort.yml
@@ -19,9 +19,7 @@ label: 'Product Weight to Sort'
 description: ''
 required: false
 translatable: true
-default_value:
-  -
-    value: 20
+default_value: {  }
 default_value_callback: ''
 settings: {  }
 field_type: list_integer
